GP stat! (c) David Fong, 2019

front-end to DailyMeasure package

Version 1.5.9, 29th April 2020
==============================

New

* Download list of configured users, including 'Identifiers'
  - for subscription application purposes
* 'bounce' reminder on update_clinicians and update_date
  button if chosen clinicians or dates change (shinyjqui effect)

Change

* chosen clinician list has an 'Update' button
* Billings view adapted to change in billings module (version 0.4.0)
  dMeasureBillings::list_billings no longer provides print/HTML tags
  use dMeasureBillings::tag_billings_list to add print/HTML tags
** improvement in billings view to reduce time to change from
   print to HTML 'button' view


Version 1.5.8, 24th April 2020
==============================

New

* asthma view in Conditions tab
* 'include up-to-date' option for cancer screening
* COVID-19 bulk billing incentive prompt in billing view
* filters for different billing typess (private, WorkCare, DVA, 'bulk'/direct)
  in billing view

Fix

* fixed logic for updating 'date_to' input on right side-panel

Version 1.5.7, 8th April 2020
=============================

New

* Walkthrough (introduction) for appointments
* Walkthrough (introduction) for immunizations
* Walkthrouhg (introduction) for cancer screening
* Walkthrough (introduction) for billings
* Walkthrough (introduction) for CDM
* Walkthrough (introduction) for Conditions - Post-natal
* Walkthrough (introduction) for Quality Improvement Measures

Change

* Updated video demonstration of features

Fix

* fix to Javascript errors when displaying frisk/friskHI in qim_cvdRisk
* fix Javascript error when displaying an empty table in QIM active (report)

Version 1.5.6, 1st April 2020
=============================

New

* 'Contact' option for CDM - list CDM opportunities by past contact
* 'include up-to-date' option for immunization/vaccination


Version 1.5.5, 30th March 2020
==============================

New
